--- a/index.html
+++ b/index.html
@@ -4,12 +4,6 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
-
-<!doctype html>
-<html lang="en">
-    <head>
-        <meta charset="utf-8">
-        <title>Meetup</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -539,6 +533,46 @@
 									<h2>Yannick Haan<br></h2>
 									<span class="sub">Netzpolitiker</span>
 									<p>Yannick ist Autor des Buches &nbsp;“Gesellschaft im digitalen Wandel”. Politisch engagiert er sich als Mitglied in der Netz- und Medienpolitischen Kommission beim SPD Parteivorstand und arbeitet als Wissenschaftlicher Mitarbeiter im Deutschen Bundestag.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Michael Aschauer" src="img/MichaelAschauer.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/back_face"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://at.linkedin.com/pub/michael-aschauer/a0/683/303"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Michael Aschauer<br></h2>
+									<span class="sub">Film and Video Artist</span>
+									<p>Michael is a digital media artist born 1977 in Steyr, Austria. Michael studied Digital Arts and Media Design in Vienna. He has won a number of prizes and awards including the Jury's Citation Award 2nd Place at the Black Maria Film Festival, New Jersey and the Award of Distinction at the Prix Ars Electronica, Linz.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Andrea Mayr-Stalder" src="img/AndreaMayr-Stalder.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/stitchcode"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Andrea Mayr-Stalder<br></h2>
+									<span class="sub">stitchcode.com</span>
+									<p>Andrea Mayr-Stalder arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Studium für Visuelle Mediengestaltung in Wien, Systemadministration und Programmierung bei Internet Service Providern in Wien und New York.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
