--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
-
+       
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -553,7 +553,7 @@
 								<div class="speaker-description">
 									<h2>Yannick Haan<br></h2>
 									<span class="sub">Netzpolitiker</span>
-									<p>Yannick ist Autor des Buches &nbsp;“Gesellschaft im digitalen Wandel”. Politisch engagiert er sich als Mitglied in der Netz- und Medienpolitischen Kommission beim SPD Parteivorstand und arbeitet als Wissenschaftlicher Mitarbeiter im Deutschen Bundestag.</p>
+									<p>Yannick ist Autor des Buches &nbsp;“Gesellschaft im digitalen Wandel”. Politisch engagiert er sich als Mitglied in der Netzpolitischen Kommission beim SPD Parteivorstand und arbeitet als Wissenschaftlicher Mitarbeiter im Deutschen Bundestag.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -593,7 +593,7 @@
 								<div class="speaker-description">
 									<h2>Michael Aschauer<br></h2>
 									<span class="sub">Film and Video Artist</span>
-									<p>Michael is a digital media artist born 1977 in Steyr, Austria. Michael studied Digital Arts and Media Design in Vienna. He has won a number of prizes and awards including the Jury's Citation Award 2nd Place at the Black Maria Film Festival, New Jersey and the Award of Distinction at the Prix Ars Electronica, Linz.</p>
+									<p>Michael ist ein Digital-Medienkünstler geboren in Steyr, Österreich. Er studierte in Wien. Er hat eine Reihe von Preisen erhalten wie den Jury's Citation Award (2.Platz) beim Black Maria Film Festival, New Jersey und den Award of Distinction beim Prix Ars Electronica.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -613,7 +613,7 @@
 								<div class="speaker-description">
 									<h2>Andrea Mayr-Stalder<br></h2>
 									<span class="sub">stitchcode.com</span>
-									<p>Andrea Mayr-Stalder arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Studium für Visuelle Mediengestaltung in Wien, Systemadministration und Programmierung bei Internet Service Providern in Wien und New York.</p>
+									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
