wrong links in speaker details

--- a/index.html
+++ b/index.html
@@ -372,8 +372,8 @@
 										<img class="background-image" alt="Andreas Braeu" src="img/andreasbraeu.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/wanleung"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://hk.linkedin.com/in/wanleung"><i class="icon social_linkedin"></i></a>
+												<a target="default" href="https://twitter.com/evaltenberga"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/andreasbraeu"><i class="icon social_linkedin"></i></a>
 											</div>
 										</div>
 									</div>
