--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 								<div class="speaker-description">
 									<h2>Greta Doci<br></h2>
 									<span class="sub">Wikipedia Community</span>
-									<p>Great ist seit zwei Jahren Teil des Hackerspaces Open Labs Albanien. Sie beschäftigt sich mit der Wikipedia und unterstützt die Arbeit von Open Source-Projekten. Ausserdem liebt sie Wandern, Reisen und Schokolade :)</p>
+									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin von OSCAL (Open Source Conference Albania). Sie beschäftigt sich mit der Wikipedia und unterstützt die Arbeit von Open Source-Projekten. Ausserdem liebt sie Wandern, Reisen und Schokolade :)</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
