--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
        
+
 <!doctype html>
 <html lang="en">
     <head>
@@ -644,7 +645,7 @@
 								<div class="speaker-description">
 									<h2>Greta Doci<br></h2>
 									<span class="sub">Wikipedia Community</span>
-									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin von OSCAL (Open Source Conference Albania). Sie beschäftigt sich mit der Wikipedia und unterstützt die Arbeit von Open Source-Projekten. Ausserdem liebt sie Wandern, Reisen und Schokolade :)</p>
+									<p>Greta studiert Informatik und arbeitet als Entwicklerin. Sie ist Mitglied des Hackerspaces Open Labs Albanien und eine Organisatorin der Open Source Conference Albania. Sie beschäftigt sich mit freiem Wissen in der Wikipedia. Sie liebt Wandern, Reisen und Schokolade :)</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
