--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015</title>
-       
+
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -721,7 +721,7 @@
 								<div class="speaker-description">
 									<h2>Frank Hofmann<br></h2>
 									<span class="sub">lug.berlin</span>
-									<p>Frank ist Mitgründer des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für das Linux-Magazin und das Magazin LinuxUser. Er ist Hauptkoordinator der Treffen der lug.berlin.</p>
+									<p>Frank ist Teil des Open-Source Experten-Netzwerks Büro 2.0 in Berlin und arbeitet als Dienstleister mit Spezialisierung auf Druck und Satz. Als Autor schreibt er für Linux Magazine und LinuxUser. Er gehört zu den Koordinatoren der Treffen über die Plattform lug.berlin.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
