--- a/index.html
+++ b/index.html
@@ -785,7 +785,7 @@
 								<div class="speaker-description">
 									<h2>Thomas Tursics<br></h2>
 									<span class="sub">Open Data Entwickler</span>
-									<p>Thomas ist ein OpenData verrückter Entwickler aus Berlin. Er hat Android und Firefox-Apps entwickelt wir BabyBenamsen, EthnoTier und baut Webseiten wie KiezKarte und Wartezeiten auf Grundlage offener Daten.</p>
+									<p>Thomas ist ein OpenData-verrückter Entwickler aus Berlin. Er hat Android und Firefox-Apps entwickelt wie BabyBenamsen und EthnoTier und baut Webseiten wie KiezKarte und Wartezeiten auf Grundlage offener Daten.</p>
 								</div>
 							</div>
 						</div></div>
