--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>OpenTechSummit Berlin 14. Mai 2015</title>
+        <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
+
 
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -626,46 +627,6 @@
 							<div class="speaker-with-bio">
 								<div class="speaker">
 									<div class="image-holder">
-										<img class="background-image" alt="Michael Aschauer" src="img/MichaelAschauer.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/back_face"><i class="icon social_twitter"></i></a>
-												<a target="default" href="http://at.linkedin.com/pub/michael-aschauer/a0/683/303"><i class="icon social_linkedin"></i></a>
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Michael Aschauer<br></h2>
-									<span class="sub">Film and Video Artist</span>
-									<p>Michael ist ein Digital-Medienkünstler geboren in Steyr, Österreich. Er studierte in Wien. Er hat eine Reihe von Preisen erhalten wie den Jury's Citation Award (2.Platz) beim Black Maria Film Festival, New Jersey und den Award of Distinction beim Prix Ars Electronica.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
-										<img class="background-image" alt="Andrea Mayr-Stalder" src="img/AndreaMayr-Stalder.jpg">
-										<div class="hover-state text-center preserve3d">
-											<div class="social-links vertical-align">
-												<a target="default" href="https://twitter.com/stitchcode"><i class="icon social_twitter"></i></a>
-												
-											</div>
-										</div>
-									</div>
-								</div>
-		
-								<div class="speaker-description">
-									<h2>Andrea Mayr-Stalder<br></h2>
-									<span class="sub">stitchcode.com</span>
-									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
-								</div>
-							</div>
-						</div><div class="col-md-6 col-sm-12">
-							<div class="speaker-with-bio">
-								<div class="speaker">
-									<div class="image-holder">
 										<img class="background-image" alt="Hauke Laging" src="img/HaukeLaging.jpg">
 										<div class="hover-state text-center preserve3d">
 											<div class="social-links vertical-align">
@@ -680,6 +641,26 @@
 									<h2>Hauke Laging<br></h2>
 									<span class="sub">Crypto für Alle</span>
 									<p>Hauke fördert mit dem Projekt "Crypto für Alle" den Einsatz von Kryptografie bei Privatanwendern. Mit Inno-Real entwickelt er Konzepte für Produkt- und Dienstleistungsinnovationen in Berlin.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="André Fiedler" src="img/AndreFiedler.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/sonnenkiste"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/pub/andr%C3%A9-fiedler/63/a73/54a/en"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>André Fiedler<br></h2>
+									<span class="sub">FirefoxOS Apps</span>
+									<p>André ist Mozillian und Entwickler für Mobilapplikationen. Er arbeitet an Anwendungen für das Internet der Dinge. Momentan ist sein Fokus eine Waschmaschinen-App um Strom und Wasser zu sparen.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -722,6 +703,66 @@
 									<h2>Sam Muirhead<br></h2>
 									<span class="sub">Camera Libre</span>
 									<p>A Free/Libre activist and Open Source consultant, Sam promotes the commons through video, writing and experimentation.&nbsp;</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Michael Aschauer" src="img/MichaelAschauer.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/back_face"><i class="icon social_twitter"></i></a>
+												<a target="default" href="http://at.linkedin.com/pub/michael-aschauer/a0/683/303"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Michael Aschauer<br></h2>
+									<span class="sub">Film and Video Artist</span>
+									<p>Michael ist ein Digital-Medienkünstler geboren in Steyr, Österreich. Er studierte in Wien. Er hat eine Reihe von Preisen erhalten wie den Jury's Citation Award (2.Platz) beim Black Maria Film Festival, New Jersey und den Award of Distinction beim Prix Ars Electronica.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Andrea Mayr-Stalder" src="img/AndreaMayr-Stalder.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/stitchcode"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Andrea Mayr-Stalder<br></h2>
+									<span class="sub">stitchcode.com</span>
+									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Manuel Schneider" src="img/ManuelSchneider.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/x80686"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://de.linkedin.com/in/80686"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Manuel Schneider<br></h2>
+									<span class="sub">Wikipedia Video</span>
+									<p>Manuel nutzt seit 1995 Linux. Er ist an zahlreichen freien Software- und Open Knowledge-Projekten beteiligt. Er ist ein IT-Autodikakt mit einem Abschluss als Diplom-Ingenieur in Informatik. Er ist Wikipedianer seit 2004, Video-Enthusiast, Initiator des WikiTV-Projekts und Kreativdirektor hinter dem Videoschnitt-Server.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
