--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
 
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -379,6 +378,46 @@
 									<h2>Michael Christen</h2>
 									<span class="sub">Gründer Yacy-Suchmaschine</span>
 									<p>Michael ist der Architekt und Maintainer der Peer-to-Peer Suchmaschinensoftware YaCy und der kommerziellen Twitter-Suche Loklak. Er arbeitet als Suchmaschinenspezialist und zählt unter seinen Kunden einige der grössten Handelshäuser Europas.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Jimmie P Rodgers" src="img/JimmiePRodgers.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/jprodgers"><i class="icon social_twitter"></i></a>
+												
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Jimmie P. Rodgers<br></h2>
+									<span class="sub"><span>Circuitbender</span></span>
+									<p>Jimmie is a a full time Hacker, Artist, Circuitbender in Somerville, MA. You can often find me at @artisansasylum.</p>
+								</div>
+							</div>
+						</div><div class="col-md-6 col-sm-12">
+							<div class="speaker-with-bio">
+								<div class="speaker">
+									<div class="image-holder">
+										<img class="background-image" alt="Mitch Altman" src="img/MitchAltman.jpg">
+										<div class="hover-state text-center preserve3d">
+											<div class="social-links vertical-align">
+												<a target="default" href="https://twitter.com/maltman23"><i class="icon social_twitter"></i></a>
+												<a target="default" href="https://www.linkedin.com/pub/mitch-altman/1/493/736"><i class="icon social_linkedin"></i></a>
+											</div>
+										</div>
+									</div>
+								</div>
+		
+								<div class="speaker-description">
+									<h2>Mitch Altman<br></h2>
+									<span class="sub">Hardware Maker</span>
+									<p>Inventor of TV-B-Gone, Co-founder of Noisebridge (San Francisco hackerspace)</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
