--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 								<div class="speaker-description">
 									<h2>Lennart Poettering</h2>
 									<span class="sub">Developer systemd</span>
-									<p>Lennart arbeitet bei Red Hat an Technologien für den Linux-Desktop. Er ist Entwickler bekannter PulseAudio und systemd. Poettering ist bekannt dafür vor kontroversen Designentscheidungen nicht zurückzuschrecken.</p>
+									<p>Lennart arbeitet bei Red Hat an Technologien für den Linux-Desktop. Er ist ein Entwickler bekannter Projekte, wie PulseAudio und systemd. Poettering ist bekannt dafür vor kontroversen Designentscheidungen nicht zurückzuschrecken.</p>
 								</div>
 							</div>
 						</div>
