--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
 								<div class="speaker-description">
 									<h2>Lennart Poettering</h2>
 									<span class="sub">Developer systemd</span>
-									<p>Lennart arbeitet bei Red Hat an Technologien für den Linux-Desktop. Er ist Entwickler bekannter PulseAudio und systemd. Poettering ist bekannt dafür vor kontroversen Designentscheidungen nicht zurückzuschrecken.</p>
+									<p>Lennart arbeitet bei Red Hat an Technologien für den Linux-Desktop. Er ist Entwickler bekannter Projekte, wie PulseAudio und systemd. Poettering ist bekannt dafür vor kontroversen Designentscheidungen nicht zurückzuschrecken.</p>
 								</div>
 							</div>
 						</div>
@@ -679,7 +679,7 @@
 								<div class="speaker-description">
 									<h2>Hauke Laging<br></h2>
 									<span class="sub">Crypto für Alle</span>
-									<p>Hauke fördert mit dem Projekt "Crypto für Alle" den Einsatz von Kryptografie bei Privatanwendern. Mit Inno-Real entwickelt er Konzepte für Produkt- und Dienstleistungsinnovationen in Berlin.</p>
+									<p>Hauke fördert mit seinem Projekt "Crypto für alle" durch Schulungen und Informationsangebote den Einsatz von Kryptografie, insbesondere an (Hoch)Schulen. Er ist der Initiator des Linux Presentation Day.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
@@ -781,7 +781,7 @@
 								<div class="speaker-description">
 									<h2>Andrea Mayr-Stalder<br></h2>
 									<span class="sub">stitchcode.com</span>
-									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
+									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete als Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
