--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
         <meta charset="utf-8">
         <title>OpenTechSummit Berlin 14. Mai 2015, Open Technologies, Open Hardware, Open Source, Open Knowledge, Internet of Things, Open Data</title>
 
-
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" media="all"/>
         <link href="css/flexslider.min.css" rel="stylesheet" type="text/css" media="all"/>
@@ -822,7 +821,7 @@
 								<div class="speaker-description">
 									<h2>Andrea Mayr-Stalder<br></h2>
 									<span class="sub">stitchcode.com</span>
-									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete als Systemadministratorin und Programmierein bei Internet Service Providern in Wien und New York.</p>
+									<p>Andrea arbeitet an künstlerischen und bildungsbezogenen Internet-Projekten. Sie studierte Visuelle Mediengestaltung in Wien und arbeitete als Systemadministratorin und Programmiererin bei Internet Service Providern in Wien und New York.</p>
 								</div>
 							</div>
 						</div><div class="col-md-6 col-sm-12">
