--- a/index.html
+++ b/index.html
@@ -1249,24 +1249,31 @@
 							<div class="testimonials-slider">
 								<ul class="slides">
 									<li>
-										<h1>Zertifizierung mit dem Linux Professionals Institute</h1>
-										<p class="lead">
-											Das Linux Professional Institute (LPI) bietet auch dieses Jahr auf dem OpenTechSummit preisreduzierte LPIC-Prüfungen an.&nbsp;
-										</p>
+										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
+										<p class="lead">Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen. Das<a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank"> Linux Professional Institute (LPI)</a>
+		 ist langjähriger Zertifizierungspartner des LinuxTag. Dadurch können 
+		die Besucher des OpenTechSummits LPI-Prüfungen zu stark vergünstigten 
+		Konditionen ablegen.</p>
 									</li>
 									
 									<li>
-										<h1>Linux Essentials</h1>
-										<p class="lead">
-											Außerdem gibt es Prüfungen des Zertifikats Linux Essentials. Es richtet sich an Einsteiger und an solche Menschen, die Linux, Open Source und ihr Ökosystem auf eine generelle Weise kennenlernen wollen.
-										</p>
+										<h1>LPI-Prüfungen</h1>
+										<p class="lead"><p class="bodytext">Folgende Examen nehmen die Prüfer auf dem LinuxTag ab:&nbsp;</p><p class="bodytext">* LPI Linux Essentials - auf Deutsch und Englisch</p><p class="bodytext">* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</p><p class="bodytext">* LPIC-3 (300, 303 und 304) - auf Englisch</p><p class="bodytext">* Univention Certified Professional Prüfung (LPI 198) - auf Englisch</p><p class="bodytext">Die
+		 Prüfungen dauern zwei Stunden inklusive Vorbereitung. Die aktuellen 
+		vergünstigten Teilnahmegebühren ab 60 Euro veröffentlicht das LPI auf 
+		seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a></p></p>
 									</li>
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead">
-											Informationen zu LPI-Prüfungen gibt es auf der LPI Webseite.&nbsp;
-										</p>
+										<p class="lead"><p class="bodytext">Die Prüfungen dauern zwei Stunden inklusive 
+		Vorbereitung. Die vergünstigten Teilnahmegebühren ab 60 Euro 
+		veröffentlicht das LPI auf seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit.</p>
+		<p class="bodytext">Teilnehmer&nbsp;<span>bezahlen</span><span>vor dem Start der 
+		Prüfung in Bar. Sie legen vor Beginn der Prüfung einen 
+		gültigen Lichtbildausweis und eine gültige LPI-Identifikationsnummer 
+		vor, die sie online unter </span><a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">cs.lpi.org/caf/Xamman/register</a><span> beantragen.</span></p>
+		<p class="bodytext">Aufgrund der begrenzten Anzahl verfügbarer Plätze für die LPI-Prüfungen empfehlen wir Teilnehmern, sich vorher <a href="https://lpievent.lpice.eu" target="_blank">anzumelden</a>.&nbsp;</p><p class="bodytext">Prüfungen finden am Donnerstag, dem 14. Mai, um 11:00 Uhr und um 14:00 Uhr im LPI-Raum in der Kalkscheune Berlin statt. Treffpunkt ist 15 Minuten vor Starttermin im Prüfungsraum.&nbsp;Details zu den Prüfungsversionen hier:</p><ul><li><a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">lpice.eu/de/lpi-zertifizierungsinhalte.html</a> </li><li><a href="http://www.lpi.org/linux-certifications" target="_blank">lpi.org/linux-certifications</a></li></ul><ul></ul></p>
 									</li>
 								</ul>
 							</div>
