--- a/index.html
+++ b/index.html
@@ -1250,30 +1250,17 @@
 								<ul class="slides">
 									<li>
 										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
-										<p class="lead">Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen. Das<a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank"> Linux Professional Institute (LPI)</a>
-		 ist langjähriger Zertifizierungspartner des LinuxTag. Dadurch können 
-		die Besucher des OpenTechSummits LPI-Prüfungen zu stark vergünstigten 
-		Konditionen ablegen.</p>
+										<p class="lead">Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen. Das<a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank"> Linux Professional Institute (LPI)</a> ist langjähriger Zertifizierungspartner des LinuxTag. Dadurch können die Besucher des OpenTechSummits LPI-Prüfungen zu stark vergünstigten Konditionen ablegen.</p>
 									</li>
 									
 									<li>
 										<h1>LPI-Prüfungen</h1>
-										<p class="lead"><p class="bodytext">Folgende Examen nehmen die Prüfer auf dem LinuxTag ab:&nbsp;</p><p class="bodytext">* LPI Linux Essentials - auf Deutsch und Englisch</p><p class="bodytext">* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</p><p class="bodytext">* LPIC-3 (300, 303 und 304) - auf Englisch</p><p class="bodytext">* Univention Certified Professional Prüfung (LPI 198) - auf Englisch</p><p class="bodytext">Die
-		 Prüfungen dauern zwei Stunden inklusive Vorbereitung. Die aktuellen 
-		vergünstigten Teilnahmegebühren ab 60 Euro veröffentlicht das LPI auf 
-		seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a></p></p>
+										<p class="lead"><p class="lead">Folgende Examen nehmen die Prüfer auf dem LinuxTag ab:&nbsp;</p><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</p><p class="lead">* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</p><p class="lead">* LPIC-3 (300, 303 und 304) - auf Englisch</p><p class="lead">* Univention Certified Professional Prüfung (LPI 198) - auf Englisch</p><p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung. Die aktuellen vergünstigten Teilnahmegebühren ab 60 Euro veröffentlicht das LPI auf seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a></p></p>
 									</li>
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead"><p class="bodytext">Die Prüfungen dauern zwei Stunden inklusive 
-		Vorbereitung. Die vergünstigten Teilnahmegebühren ab 60 Euro 
-		veröffentlicht das LPI auf seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit.</p>
-		<p class="bodytext">Teilnehmer&nbsp;<span>bezahlen</span><span>vor dem Start der 
-		Prüfung in Bar. Sie legen vor Beginn der Prüfung einen 
-		gültigen Lichtbildausweis und eine gültige LPI-Identifikationsnummer 
-		vor, die sie online unter </span><a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">cs.lpi.org/caf/Xamman/register</a><span> beantragen.</span></p>
-		<p class="bodytext">Aufgrund der begrenzten Anzahl verfügbarer Plätze für die LPI-Prüfungen empfehlen wir Teilnehmern, sich vorher <a href="https://lpievent.lpice.eu" target="_blank">anzumelden</a>.&nbsp;</p><p class="bodytext">Prüfungen finden am Donnerstag, dem 14. Mai, um 11:00 Uhr und um 14:00 Uhr im LPI-Raum in der Kalkscheune Berlin statt. Treffpunkt ist 15 Minuten vor Starttermin im Prüfungsraum.&nbsp;Details zu den Prüfungsversionen hier:</p><ul><li><a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">lpice.eu/de/lpi-zertifizierungsinhalte.html</a> </li><li><a href="http://www.lpi.org/linux-certifications" target="_blank">lpi.org/linux-certifications</a></li></ul><ul></ul></p>
+										<p class="lead"><p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung. Die vergünstigten Teilnahmegebühren ab 60 Euro veröffentlicht das LPI auf seiner <a href="https://lpievent.lpice.eu" target="_blank">Registrierungsseite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit.</p>	<p class="lead">Teilnehmer bezahlen vor dem Start der Prüfung in Bar. Bitte legen Sie vor Beginn einen Lichtbildausweis und eine gültige LPI-Identifikationsnummer vor, die sie online <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier</a><span> erhalten.</p>	<p class="lead">Aufgrund der begrenzten Anzahl verfügbarer Plätze empfehlen wir Teilnehmern, sich vorher <a href="https://lpievent.lpice.eu" target="_blank">anzumelden</a>.&nbsp;</p><p class="lead">Prüfungen finden am Donnerstag, dem 14. Mai, um 11 Uhr und um 14 Uhr im LPI-Raum in der Kalkscheune Berlin statt. Treffpunkt 15 Minuten vor Prüfungsbeginn im LPI-Raum. Weitere Details zu den Prüfungsversionen hier auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
 									</li>
 								</ul>
 							</div>
