--- a/index.html
+++ b/index.html
@@ -1250,7 +1250,7 @@
 								<ul class="slides">
 									<li>
 										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
-										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an. Linux-Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen.</p>
+										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an. Linux-Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
 									</li>
 									
 									<li>
