--- a/index.html
+++ b/index.html
@@ -1255,7 +1255,8 @@
 									
 									<li>
 										<h1>LPI-Prüfungen</h1>
-										<p class="lead"><p class="lead">Folgende Examen nehmen die Prüfer auf dem LinuxTag am 14. Mai ab:&nbsp;</p><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</p><p class="lead">* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</p><p class="lead">* LPIC-3 (300, 303 und 304) - auf Englisch</p><p class="lead">* Univention Certified Professional Prüfung (LPI 198) - auf Englisch</p><p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung.</p>
+										<p class="lead"><p class="lead">Folgende Examen nehmen die Prüfer auf dem LinuxTag am 14. Mai ab:&nbsp;</p><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</p><p class="lead">* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</br>* LPIC-3 (300, 303 und 304) - auf Englisch</br>* Univention Certified Professional Prüfung (LPI 198) - auf Englisch</br>Die Prüfungen dauern zwei Stunden inklusive Vorbereitung.</p>
+										<p class="lead"><a href="https://lpievent.lpice.eu" target="_blank">Registrierung hier</a>.</p>
 									</li>
 									
 									<li>
