--- a/index.html
+++ b/index.html
@@ -1250,18 +1250,18 @@
 								<ul class="slides">
 									<li>
 										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
-										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an. Linux-Zertifikate belegen Fachwissen<b>:</b> Sie dokumentieren Qualifikation und Know-how vor Arbeitgebern oder Kunden und verbessern die Ein- und Aufstiegschancen.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
+										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
 									</li>
 									
 									<li>
 										<h1>LPI-Prüfungen</h1>
-										<p class="lead">Folgende Examen nehmen die Prüfer auf dem LinuxTag am 14. Mai ab:&nbsp;</p><p class="lead"><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</br>* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</br>* LPIC-3 (300, 303 und 304) - auf Englisch</br>* Univention Certified Professional Prüfung (LPI 198) - auf Englisch
+										<p class="lead">Folgende Examen nehmen die Prüfer am 14. Mai ab:&nbsp;</p><p class="lead"><p class="lead">* LPI Linux Essentials - auf Deutsch und Englisch</br>* LPIC-1 und LPIC-2 (101, 102, 201, 202) - auf Deutsch und Englisch</br>* LPIC-3 (300, 303 und 304) - auf Englisch</br>* Univention Certified Professional Prüfung (LPI 198) - auf Englisch
 										<p class="lead">Die Prüfungen dauern zwei Stunden inklusive Vorbereitung. <a href="https://lpievent.lpice.eu" target="_blank">Registrierung hier</a>.</p>
 									</li>
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead">Die vergünstigten Teilnahmegebühren ab 60 Euro erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit. Teilnehmer bezahlen vor dem Start der Prüfung in Bar. Bitte Lichtbildausweis und gültige LPI-Identifikationsnummer mitbringen, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
+										<p class="lead">Die vergünstigten Teilnahmegebühren ab 60 Euro erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit.</p><p class="lead"> Teilnehmer bezahlen vor dem Start der Prüfung in Bar. Bitte Lichtbildausweis und gültige LPI-Identifikationsnummer mitbringen, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
 										<p class="lead">Prüfungstermine: Donnerstag, 14. Mai, um 11 Uhr und um 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn im LPI-Raum. Weitere Details zu den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
 									</li>
 								</ul>
