--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead">Die vergünstigten Gebühren ab 60 Euro erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Seite.</a>&nbsp;Die Gebühr beinhaltet den Eintritt zum OpenTechSummit.</p><p class="lead"> Teilnehmer bezahlen vor dem Start in Bar. Bitte Lichtbildausweis und gültige LPI-Nummer mitbringen, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
+										<p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Seite.</a>&nbsp;Teilnehmer bezahlen vor dem Start in Bar. Bitte Lichtbildausweis und gültige LPI-Nummer mitbringen, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
 										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
 									</li>
 								</ul>
