--- a/index.html
+++ b/index.html
@@ -1251,7 +1251,7 @@
 									<li>
 										<h1>LPI-Prüfungen - Zertifikate belegen Fachwissen</h1>
 										<p class="lead">Das <a href="http://www.lpice.eu/de/home.html" title="Linux Professional Institute (LPI)" target="_blank">Linux Professional Institute (LPI)</a> bietet <a href="https://lpievent.lpice.eu" target="_blank">LPI-Prüfungen zu stark vergünstigten Konditionen</a> ab 60 Euro, inklusive Eintritt zum OpenTechSummit an.</p><p class="lead">Bitte <a href="https://lpievent.lpice.eu" target="_blank">hier registrieren</a>.</p>
-										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
+										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn.</p>
 									</li>
 									
 									<li>
