--- a/index.html
+++ b/index.html
@@ -1262,7 +1262,7 @@
 									
 									<li>
 										<h1>Zertifizierte Linux-Prüfung</h1>
-										<p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a> Bitte bezahlen Sie in Bar vor Ort und bringen Sie Lichtbildausweis und gültige LPI-Nummer, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
+										<p class="lead">Die vergünstigten Gebühren ab 60 Euro inklusive Eintritt zum OpenTechSummit erhalten sie auf der <a href="https://lpievent.lpice.eu" target="_blank">LPI-Registrierungsseite.</a> Bitte bezahlen Sie vor Ort in Bar und bringen Sie Lichtbildausweis und gültige LPI-Nummer, die sie <a href="https://cs.lpi.org/caf/Xamman/register" target="_blank">hier erhalten</a><span>.</p>	
 										<p class="lead">Termine: Donnerstag, 14. Mai, 11 Uhr und 14 Uhr im LPI-Raum. Treffpunkt: 15 Minuten vor Prüfungsbeginn. Weitere Details zu den Prüfungsversionen auf <a href="http://www.lpice.eu/de/lpi-zertifizierungsinhalte.html" target="_blank">Deutsch</a> und auf <a href="http://www.lpi.org/linux-certifications" target="_blank">Englisch</a></p>
 									</li>
 								</ul>
